--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=8081
 
 api.key=3f159511ac64f5393feaa6f3c700c74b
 
+spring.mvc.view.prefix=/WEB-INF/views/
+
+spring.mvc.view.suffix=.jsp
